Set image dimensions to prevent jumpiness when re-rendered

--- a/assets/demo.sass
+++ b/assets/demo.sass
@@ -32,6 +32,10 @@ ul, ol, li
   li
     margin-left: 20px
 
+img
+  max-width: 100%
+  height: auto
+
 figure.attachment
   position: relative
   padding: 0
